refs #1743 german translation

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -1343,30 +1343,24 @@ preview_folder_remove.dialog.text=PowerFolder {0} entfernen?
 #orig#preview_folder_remove.dialog.title=Remove PowerFolder {0}?
 preview_folder_remove.dialog.title=PowerFolder {0} entfernen?
 
-## -------------------------------------------------------------------
-##
-## @ TOT: Bis hier übersetzt
-##
-## -------------------------------------------------------------------
-
-##pro.action_open_license_file.description=Opens a license key file from disk
-##pro.action_open_license_file.key=O
-##pro.action_open_license_file.name=Open license file
-##pro.activation.description=Activate the program here
-##pro.activation.name=Program Activation
-##pro.download_csv.description=Downloads the list of accounts as CSV
-##pro.download_csv.key=D
-##pro.download_csv.name=Download as CSV
-##pro.filelist_writer.description=Writes the filelists as CSV file into the folder
-##pro.filelist_writer.name=Filelist Writer
-##pro.home_tab.disabled=Not running. Activate now
-##pro.home_tab.disabled.tips=Click to learn why PowerFolder is currently disabled.
-##pro.home_tab.remaining={0} day(s) remaining
-##pro.home_tab.remaining.tips=Your license will expire in {0} days
-##pro.home_tab.renew_license=Renew PowerFolder
-##pro.home_tab.upgrade_powerfolder=Upgrade PowerFolder
-##pro.http.description=HTTP connections tunneled via HTTP
-##pro.http.name=HTTP tunneled connections
+pro.action_open_license_file.description=Eine Lizenzdatei laden
+pro.action_open_license_file.key=L
+pro.action_open_license_file.name=Lizendatei laden
+pro.activation.description=Program hier aktivieren
+pro.activation.name=Program Aktivierung
+pro.download_csv.description=Benutzerkonten in CSV Datei konvertieren
+pro.download_csv.key=E
+pro.download_csv.name=CSV export
+pro.filelist_writer.description=Schreibt die Dateiliste als CSV Datei in alle Folder
+pro.filelist_writer.name=CSV Dateilisten
+pro.home_tab.disabled=Deaktiviert. Hier aktivieren.
+pro.home_tab.disabled.tips=Warum ist PowerFolder derzeit deaktiviert?
+pro.home_tab.remaining={0} Tag(e) übrig
+pro.home_tab.remaining.tips=Ihre Lizenz wird in {0} auslaufen
+pro.home_tab.renew_license=Lizenz verlängern
+pro.home_tab.upgrade_powerfolder=PowerFolder bestellen
+pro.http.description=Verbindungen werden über HTTP geschleußt
+pro.http.name=Getunnelte HTTP Verbindungen
 #orig#pro.http.options.directconnect=Direct connection to Internet
 pro.http.options.directconnect=Direkte Verbindung zum Internet
 #orig#pro.http.options.host=Hostname
@@ -1383,14 +1377,14 @@ pro.http.options.title=HTTP Verbindungseinstellungen
 pro.http.options.username=Benutzername
 #orig#pro.http.options.withauth=With authorization
 pro.http.options.withauth=Mit Anmeldung
-##pro.monitor.description=Activates remote monitoring of this client
-##pro.monitor.name=Remote Monitoring
-##pro.process_order.description=
-##pro.process_order.key=O
-##pro.process_order.name=Process order
+pro.monitor.description=Aktiviert die Fernüberwachung dieses Clients
+pro.monitor.name=Fernüberwachung
+pro.process_order.description=
+pro.process_order.key=A
+pro.process_order.name=Bestellung abwickeln
 #orig#pro.security.autoacceptfriendkeys=Automatically accept first time public keys from friends
 pro.security.autoacceptfriendkeys=Ersten \u00f6ffentlichen Schl\u00fcssel eines Freudes automatisch akzeptieren.
-##pro.security.description=Provides encrypted transfers
+pro.security.description=Verschlüsselt alle Verbindungen
 #orig#pro.security.high=High
 pro.security.high=Hoch
 #orig#pro.security.high_info=High security (default)\:
@@ -1413,7 +1407,7 @@ pro.security.low_info=Niedrige Sicherheit\:
 pro.security.maximum=Maximal
 #orig#pro.security.maximum_info=Maximum security\:
 pro.security.maximum_info=Maximale Sicherheit\:
-##pro.security.name=Encrypted transfers
+pro.security.name=Verschlüsselte Verbindungen
 #orig#pro.security.newkey=New Key detected
 pro.security.newkey=Neuer Schl\u00fcssel entdeckt
 #orig#pro.security.nokeyfound=No public key for {0} found in internal keystore.\nDo you want to accept his new key now?
@@ -1424,20 +1418,20 @@ pro.security.possiblebreach=M\u00f6glicher Sicherheitsbruch
 pro.security.secure=sicher
 #orig#pro.security.securitysettings=Security Settings
 pro.security.securitysettings=Sicherheitseinstellungen
-##pro.server_admin.description=Manages connected servers
-##pro.server_admin.name=Server Admin Console
-##pro.system_service.description=Configure to run as system service
-##pro.system_service.name=System Service
-##pro.systemservice.options.info1=Use these options install/uninstall
-##pro.systemservice.options.info2=PowerFolder as system service.
-##pro.systemservice.options.install=Install
-##pro.systemservice.options.title=PowerFolder System Service
-##pro.systemservice.options.uninstall=Uninstall
-##pro.udt_connections.description=Enable to prefer UDT over TCP connections
-##pro.udt_connections.name=Direct UDT connect
+pro.server_admin.description=Verwaltet verbundene Server
+pro.server_admin.name=Server Admin Konsole
+pro.system_service.description=Als Systemdienst einrichten
+pro.system_service.name=Systemdienst
+pro.systemservice.options.info1=Hier PowerFolder als Systemdienst
+pro.systemservice.options.info2=einrichten oder entfernen.
+pro.systemservice.options.install=Installieren
+pro.systemservice.options.title=PowerFolder Systemdienst
+pro.systemservice.options.uninstall=Entfernen
+pro.udt_connections.description=UDT Verbindungen bevozugen
+pro.udt_connections.name=Direkte UDT Verbindungen
 #orig#pro.wizard.activation.activating=Activating PowerFolder Pro
 pro.wizard.activation.activating=Aktiviere PowerFolder Pro
-##pro.wizard.activation.agree_gtcs=I agree to the General Terms and Conditions
+pro.wizard.activation.agree_gtcs=Ich stimme den AGBs zu
 #orig#pro.wizard.activation.choose_key_file=Choose License key file
 pro.wizard.activation.choose_key_file=Lizenzdatei ausw\u00e4hlen
 #orig#pro.wizard.activation.computers_allowed=Computers allowed\:
@@ -1464,13 +1458,13 @@ pro.wizard.activation.key_file=Lizenzschl\u00fcssel Datei
 pro.wizard.activation.key_valid_till=G\u00fcltig bis\:
 #orig#pro.wizard.activation.license_key=License Key
 pro.wizard.activation.license_key=Lizenzschl\u00fcssel
-##pro.wizard.activation.limit_hit=Only {1} GBs data and {0} folders allowed.
+pro.wizard.activation.limit_hit=Nur {1} GBs Datten und {0} Folders erlaubt.
 #orig#pro.wizard.activation.multiple_key_select=Login successful. Please select the license key to use.
 pro.wizard.activation.multiple_key_select=Login erfolgreich. Bitte w\u00e4hlen Sie einen Lizenzschl\u00fcssel
 #orig#pro.wizard.activation.no_key_available=No valid license key available
 pro.wizard.activation.no_key_available=Kein g\u00fcltiger Lizenzschl\u00fcssel gefunden
-##pro.wizard.activation.no_key_info=Please activate with an existing account.
-##pro.wizard.activation.number_gbs=Allowed data (GB)
+pro.wizard.activation.no_key_info=Bitte aktivieren Sie mit einem bestehende Nutzerkonto.
+pro.wizard.activation.number_gbs=GB erlaubt
 #orig#pro.wizard.activation.number_of_computers=Allowed computers
 pro.wizard.activation.number_of_computers=Erlaubte Computer
 #orig#pro.wizard.activation.one_key_available=Login successful. Got one license key.
@@ -1491,8 +1485,8 @@ pro.wizard.activation.pro_activation=PowerFolder Pro Aktivierung
 pro.wizard.activation.recover_password=Passwort vergessen
 #orig#pro.wizard.activation.register_now=Sign up for an account
 pro.wizard.activation.register_now=Zugangskonto erstellen
-##pro.wizard.activation.register_now_trial=Please sign up for an free account to use PowerFolder.
-##pro.wizard.activation.signup_account=Sign up for an account now
+pro.wizard.activation.register_now_trial=Bitte richten Sie ein Nutzerkonto ein um PowerFolder zu nutzen.
+pro.wizard.activation.signup_account=Jetzt neues Nutzerkonto einrichten
 #orig#pro.wizard.activation.subscribe_newsletter=Subscribe to newsletter
 pro.wizard.activation.subscribe_newsletter=Newsletter abonnieren
 #orig#pro.wizard.activation.successful=Activation successful
@@ -1533,77 +1527,77 @@ select_invitation.text2=Senden Sie nie einem Unbekannten ein Einladung.
 #orig#send_invitation.placetostore=Choose a place to store invitation
 send_invitation.placetostore=W\u00e4hlen Sie den Ort, an dem Sie die Einladung speichern m\u00f6chten\:
 
-##send_invitations_advanced.clear_tip=Clear directory
-##send_invitations_advanced.file_hint=Directory
-##send_invitations_advanced.file_label=Save to file
-##send_invitations_advanced.filename=Filename
-##send_invitations_advanced.location_tip=Select invitation directory
-##send_invitations_advanced.permissions_hint=Permissions
-##send_invitations_advanced.permissions_label=Folder permissions
+send_invitations_advanced.clear_tip=Verzeichnis entfernen
+send_invitations_advanced.file_hint=Verzeichnis
+send_invitations_advanced.file_label=Als Datei speichern
+send_invitations_advanced.filename=Dateiname
+send_invitations_advanced.location_tip=Verzeichnis für Einladung
+send_invitations_advanced.permissions_hint=Berechtigungen
+send_invitations_advanced.permissions_label=Folder Berechtigungen
 
-##settings_tab.add_a_pattern.example=example/*.jpg
-##settings_tab.add_a_pattern.text=Enter a pattern to exclude files from synchronization
-##settings_tab.add_a_pattern.title=Add ignore pattern
-##settings_tab.add_patterns.text_1=The following ignore patterns will be added
-##settings_tab.add_patterns.title=Add ignore patterns
-##settings_tab.basedir.text=It is not possible to move a folder to the PowerFolder base directory.
-##settings_tab.basedir.title=Base directory
-##settings_tab.confirm_local_folder_move.text=Local folder will be moved from\n{0}\nto\n{1}.
-##settings_tab.confirm_local_folder_move.title=Confirm move
+settings_tab.add_a_pattern.example=beispiel/*.jpg
+settings_tab.add_a_pattern.text=Datei-Muster eingeben die von der Synchronisation ausgenommen werden sollen.
+settings_tab.add_a_pattern.title=Ausnahe hinzufügen
+settings_tab.add_patterns.text_1=Folgendes Datei-Muster als Ausnahme hinzufügen
+settings_tab.add_patterns.title=Ausnahe hinzufügen
+settings_tab.basedir.text=Nicht möglich das Speicherort in den Standart-Speicherort zu verschieben
+settings_tab.basedir.title=Speicherort
+settings_tab.confirm_local_folder_move.text=Lokaler Folder wird verschoben von \n{0}\nnach\n{1}.
+settings_tab.confirm_local_folder_move.title=Verschieben bestätigen
 #orig#settings_tab.download_script=Script after download
 settings_tab.download_script=Script nach Download
 #orig#settings_tab.download_script.select=Select
 settings_tab.download_script.select=Ausw\u00e4hlen
-##settings_tab.edit_a_pattern.text=Edit a pattern to exclude files from synchronization
-##settings_tab.edit_a_pattern.title=Edit a pattern
-##settings_tab.folder_not_empty=Folder {0} is not empty.
-##settings_tab.folder_not_empty.title=Folder not empty
-##settings_tab.ignore_patterns=Ignore patterns
-##settings_tab.local_folder_location=Local folder location
-##settings_tab.move_content=Also move current folder contents?
-##settings_tab.move_content.dont=Do Not Move Contents
-##settings_tab.move_content.move=Move Contents
-##settings_tab.move_content.title=Move folder contents
-##settings_tab.move_error.other=There was an error moving the folder\:\n{0}
-##settings_tab.move_error.temp=Could not create temporary folder
-##settings_tab.move_error.title=Error moving folder contents
-##settings_tab.preview_warning_convert=Convert
-##settings_tab.preview_warning_message=Do you want to convert this folder to a preview?
-##settings_tab.preview_warning_title=Convert
-##settings_tab.select_directory.text=Select folder location
-##settings_tab.subdir.text=It is not possible to move a folder to one of its subdirectories.
-##settings_tab.subdir.title=Subdirectory
-##settings_tab.working.description=The folder is being moved
-##settings_tab.working.title=Moving folder
+settings_tab.edit_a_pattern.text=Datei-Muster bearbeiten
+settings_tab.edit_a_pattern.title=Datei-Muster bearbeiten
+settings_tab.folder_not_empty=Folder {0} ist nicht leer.
+settings_tab.folder_not_empty.title=Folder nicht leer
+settings_tab.ignore_patterns=Datei-Muster Ausschlüsse
+settings_tab.local_folder_location=Lokaler Speicherort
+settings_tab.move_content=Auch Inahlt mitverschieben?
+settings_tab.move_content.dont=Inhalt nicht verschieben
+settings_tab.move_content.move=Inhalt verschieben
+settings_tab.move_content.title=Inahlte verschieben
+settings_tab.move_error.other=Fehler beim Verschieben des Speicherorts\:\n{0}
+settings_tab.move_error.temp=Temporäres Verzeichnis konnte nicht erstellt werden.
+settings_tab.move_error.title=Fehler beim Verschieben der Inhalte
+settings_tab.preview_warning_convert=Umwandeln
+settings_tab.preview_warning_message=Diesen Folder nur noch als Vorschau behalten?
+settings_tab.preview_warning_title=Umwandeln
+settings_tab.select_directory.text=Speicherort auswählen
+settings_tab.subdir.text=Es ist nicht möglich in ein Unterverzeichnis zu verschieben
+settings_tab.subdir.title=Unterverzeichnis
+settings_tab.working.description=Der Folder wird verschoben
+settings_tab.working.title=Verschiebe Folder
 
-##skin.black_moon=Black Moon
-##skin.black_star=Black Star
-##skin.blue_ice=Blue Ice
-##skin.blue_moon=Blue Moon
-##skin.blue_steel=Blue Steel
-##skin.green_dream=Green Dream
-##skin.mauve_metallic=Mauve Metallic
-##skin.orange_metallic=Orange Metallic
-##skin.silver_moon=Silver Moon
-##skin.sky_metallic=Sky Metallic
-##skin.white_vision=White Vision
+skin.black_moon=Black Moon
+skin.black_star=Black Star
+skin.blue_ice=Blue Ice
+skin.blue_moon=Blue Moon
+skin.blue_steel=Blue Steel
+skin.green_dream=Green Dream
+skin.mauve_metallic=Mauve Metallic
+skin.orange_metallic=Orange Metallic
+skin.silver_moon=Silver Moon
+skin.sky_metallic=Sky Metallic
+skin.white_vision=White Vision
 
-##status.active_download_count=Active\: {0}
-##status.active_upload_count=Active\: {0}
-##status.chat_pending=There are chat messages waiting
-##status.completed_download_count=Completed\: {0}
-##status.completed_upload_count=Completed\: {0}
+status.active_download_count=Aktiv\: {0}
+status.active_upload_count=Aktiv\: {0}
+status.chat_pending=Ungelesen Nachrichten verfügbar
+status.completed_download_count=Fertiggestellt\: {0}
+status.completed_upload_count=Fertiggestellt\: {0}
 #orig#status.download=Down\: {0} KB/s
 status.download=%.2f KB/s
-##status.port.text=Port\: {0}
-##status.port.tip=PowerFolder connection port number
+status.port.text=Port\: {0}
+status.port.tip=Verwendeter Netzwerkport
 #orig#status.upload=Up\: {0} KB/s
 status.upload=%.2f KB/s
 
-##status_bar.no_sleep.tips=Enable folder change scanning
-##status_bar.poor_quality_warning.text=Most connections are being routed via PowerFolder servers
-##status_bar.poor_quality_warning.title=Poor connection quality
-##status_bar.sleep.tips=Disable folder change scanning
+status_bar.no_sleep.tips=Suche nach Änderungen aktivieren
+status_bar.poor_quality_warning.text=Die meisten Verbindungen werden nur getunnelt.
+status_bar.poor_quality_warning.title=Schlechte Verbindungsqualität
+status_bar.sleep.tips=Suche nach Änderungen deaktivieren
 #orig#status_bar.status_change.connected=PowerFolder is connected
 status_bar.status_change.connected=PowerFolder ist verbunden
 #orig#status_bar.status_change.disabled=PowerFolder is disabled
@@ -1616,18 +1610,18 @@ synchronization.notice.title=Transfer Modus {0} eingestellt
 #orig#synchronization.warning.automatic_deletions_notice=This mode will also synchronize file deletions\!
 synchronization.warning.automatic_deletions_notice=Dieser Modus synchronisiert auch Dateil\u00f6schungen\!
 
-##system_monitor.cpu_usage=CPU Usage\:
-##system_monitor.heap_usage=Heap Usage\:
-##system_monitor.threads=Threads\:
-##system_monitor.title=System Monitor
+system_monitor.cpu_usage=CPU Nutzung\:
+system_monitor.heap_usage=Speichernutzung\:
+system_monitor.threads=Threads\:
+system_monitor.title=System Monitor
 
 #orig#systray.exit=Exit
 systray.exit=Beenden
 #orig#systray.hide=Hide
 systray.hide=Verstecken
-##systray.notifications=Notifications
-##systray.notifications.chat=Show Chat Notifications
-##systray.notifications.system=Show System Notifications
+systray.notifications=Meldungen
+systray.notifications.chat=Zeige Chat Nachrichten
+systray.notifications.system=Zeige Systemnachrichten
 #orig#systray.powerfolder=PowerFolder v{0}
 systray.powerfolder=PowerFolder v{0}
 #orig#systray.show=Show
@@ -1651,6 +1645,14 @@ systray.tooltip.up.mb=Up {0} MBs
 ##tip_of_the_day.text_1=Demo Tip of the Day 1
 ##tip_of_the_day.text_2=Demo Tip of the Day 2
 ##tip_of_the_day.text_3=Demo Tip of the Day 3
+
+
+## -------------------------------------------------------------------
+##
+## @ TOT: Bis hier übersetzt
+##
+## -------------------------------------------------------------------
+
 
 ##transfer.problem.broken.download=The transfer download was broken
 ##transfer.problem.broken.upload=The transfer upload was broken
