refs #1743 german translation

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -966,7 +966,7 @@ home_tab.online_storage.usage=Online Nutzung\: {0} ({1}%)
 home_tab.sync_eta=Alle Folder synchronisiert um {0}
 home_tab.synchronization=Synchronisation
 home_tab.synchronizing=Synchronisation läuft...
-home_tab.tell_friend.text=Einen Freund(in) zu PowerFolder einladen
+home_tab.tell_friend.text=PowerFolder weiterempfehlen
 home_tab.tell_friend.tip=Klick um einem Freund oder Freundin zu PowerFolder einladen
 home_tab.total={0} gesamt
 home_tab.you_have=Sie haben
