refs #1743 german translation

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -1646,40 +1646,32 @@ systray.tooltip.up.mb=Up {0} MBs
 ##tip_of_the_day.text_2=Demo Tip of the Day 2
 ##tip_of_the_day.text_3=Demo Tip of the Day 3
 
+transfer.problem.broken.download=Dateiübertragung abgebrochen
+transfer.problem.broken.upload=Dateiübertragung abgebrochen
+transfer.problem.file.not.found.exception=Datei nicht gefunden\: {0}
+transfer.problem.general.exception=Fehler\: {0}
+transfer.problem.illegal.chunk=Ungültiger Dateiteil\: {0}
+transfer.problem.invalid.part=Ungültige Anfrage erhalten
+transfer.problem.io.exception=Kann nicht Lesen/Schreiben\: {0}
+transfer.problem.md5.error=MD5-Hash Problem
+transfer.problem.old.upload=Download Anforderung bereits erhalten von {0}
+transfer.problem.temp.file.delete=Kann temporäre Datei nicht löschen
+transfer.problem.temp.file.open=Kann temporäre Datein nicht öffnen
+transfer.problem.temp.file.write=Kann nicht in temporaräre Datei schreiben
+transfer.problem.transfer.broken=Übertragung abgebrochen
+transfer.problem.transfer.exception=Übertragungsproblem\: {0}
 
-## -------------------------------------------------------------------
-##
-## @ TOT: Bis hier übersetzt
-##
-## -------------------------------------------------------------------
-
-
-##transfer.problem.broken.download=The transfer download was broken
-##transfer.problem.broken.upload=The transfer upload was broken
-##transfer.problem.file.not.found.exception=There was a FileNotFoundException\: {0}
-##transfer.problem.general.exception=There was an Exception\: {0}
-##transfer.problem.illegal.chunk=Received illegal chunk\: {0}
-##transfer.problem.invalid.part=Received invalid part request
-##transfer.problem.io.exception=Unable to read/write\: {0}
-##transfer.problem.md5.error=There was an MD5-Hash error
-##transfer.problem.old.upload=Already received download request from {0}
-##transfer.problem.temp.file.delete=Unable to remove broken tempfile
-##transfer.problem.temp.file.open=Unable to create/open tempfile
-##transfer.problem.temp.file.write=Unable to write to tempfile
-##transfer.problem.transfer.broken=Transfer broken
-##transfer.problem.transfer.exception=There was a TransferException\: {0}
-
-##transfer_mode.auto_download_friends.name=Auto-download friends
-##transfer_mode.automatic_download.name=Automatic download
-##transfer_mode.automatic_synchronization.name=Automatic synchronization
-##transfer_mode.automatic_synchronization_10min.name=Automatic synchronization (10 minutes)
-##transfer_mode.backup_source.name=Backup (source)
-##transfer_mode.backup_target.name=Backup (target)
-##transfer_mode.custom.name=Custom profile
-##transfer_mode.disabled.name=Disabled
-##transfer_mode.host_files.name=Share/Send
-##transfer_mode.manual_synchronization.name=Manual synchronization
-##transfer_mode.no_sync.name=No synchronization
+transfer_mode.auto_download_friends.name=Automatisch herunterladen (Freunde)
+transfer_mode.automatic_download.name=Automatisch herunterladen
+transfer_mode.automatic_synchronization.name=Automatisch synchronisieren
+transfer_mode.automatic_synchronization_10min.name=Automatisch synchronisieren (10 Minuten)
+transfer_mode.backup_source.name=Backup (Quelle)
+transfer_mode.backup_target.name=Backup (Ziel)
+transfer_mode.custom.name=Eigener Modus
+transfer_mode.disabled.name=Abgeschaltet
+transfer_mode.host_files.name=Versenden
+transfer_mode.manual_synchronization.name=Manuell synchronisieren
+transfer_mode.no_sync.name=Keine Synchronisation
 
 #orig#transfers.completed=Completed
 transfers.completed=Vollst\u00e4ndig
@@ -1705,24 +1697,24 @@ transfers.remote_hashing=Vorbereiten
 transfers.requested=Angefordert
 #orig#transfers.searching=Searching...
 transfers.searching=Suche...
-##transfers.swarm=Swarm\: {0} members
+transfers.swarm=Schwarm\: {0} Quellen
 #orig#transfers.to=To
 transfers.to=Zu
 #orig#transfers.verifying=Finalizing
 transfers.verifying=Abschlie\u00dfen
 
-##uicontroller.local_mass_delete.broadcast_deletions=Broadcast deletions
-##uicontroller.local_mass_delete.message=All files in folder {0} have been deleted.\n\nDeletions have not been distributed to other members.
-##uicontroller.local_mass_delete.remove_folder_locally=Remove folder locally
-##uicontroller.local_mass_delete.title=All files deleted
-##uicontroller.remote_mass_delete.warning_message=Member {0} deleted {1}% of files from folder {2}.\n\nTo protect local files, this folder's transfer mode has been changed\nfrom {3} to {4}.
-##uicontroller.remote_mass_delete.warning_title=Mass deletion detected
+uicontroller.local_mass_delete.broadcast_deletions=Löschung veröffentlichen
+uicontroller.local_mass_delete.message=Alle Dateien in {0} wurden gelöscht.\n\nDie Löschung wurde nicht an andere Mitglieder übertragen.
+uicontroller.local_mass_delete.remove_folder_locally=Folder lokal entfernen
+uicontroller.local_mass_delete.title=Alle Dateien gelöscht
+uicontroller.remote_mass_delete.warning_message=Mitglied {0} hat {1}% der Dateien in {2} gelöscht.\n\nUm die lokalen Dateien zu schützen wurde der Transfer Modus\nvon {3} auf {4} gestellt.
+uicontroller.remote_mass_delete.warning_title=Löschschutz
 
-##uploads_information_card.auto_cleanup.days={0} day(s)
-##uploads_information_card.auto_cleanup.description=Clean up any uploads when they complete
-##uploads_information_card.auto_cleanup.immediate=Immediate
-##uploads_information_card.auto_cleanup.name=Auto-cleanup
-##uploads_information_card.title=Uploads
+uploads_information_card.auto_cleanup.days={0} Tag(e)
+uploads_information_card.auto_cleanup.description=Uploads aufräumen nach fertigstellung
+uploads_information_card.auto_cleanup.immediate=Sofort
+uploads_information_card.auto_cleanup.name=Auto-Aufräumen
+uploads_information_card.title=Uploads
 
 #orig#user.dir.contacts=Contacts
 user.dir.contacts=Kontakte
@@ -1762,7 +1754,7 @@ winutils.shortcut.description=Diese Verkn\u00fcpfung wurde von PowerFolder erste
 wizard.basic_setup.computer_name=Name dieses Computers
 #orig#wizard.basic_setup.default_folder_name=Synchronized Files
 wizard.basic_setup.default_folder_name=Synchronisierte Dateien
-##wizard.basic_setup.language_restart=Language (requires restart)
+wizard.basic_setup.language_restart=Sprache (Neustart erforderlich)
 #orig#wizard.basic_setup.networking=Connect to
 wizard.basic_setup.networking=Verbindungen
 #orig#wizard.basic_setup.title=Basic Setup
@@ -1771,33 +1763,33 @@ wizard.basic_setup.title=Basis Setup
 wizard.basic_setup.upload.text=Unbegrenzte Bandbreite kann zu einer hohe Auslastung der Internet Verbindung f\u00fchren.
 #orig#wizard.basic_setup.upload.title=Unlimited connection speed
 wizard.basic_setup.upload.title=Unbegrenzte Bandbreite
-##wizard.choose_disk_location.backup_by_online_storage=Backup online
-##wizard.choose_disk_location.calculating_directory_size=Calculating size...
-##wizard.choose_disk_location.create_desktop_shortcut=Create desktop shortcut
-##wizard.choose_disk_location.directory_no_write=WARNING\: This directory cannot be written to
-##wizard.choose_disk_location.directory_non_existent=WARNING\: This directory does not exist
+wizard.choose_disk_location.backup_by_online_storage=Online sichern
+wizard.choose_disk_location.calculating_directory_size=Berechne Größe...
+wizard.choose_disk_location.create_desktop_shortcut=Desktop Verknüfung erstellen
+wizard.choose_disk_location.directory_no_write=WARNUNG\: In das Verzeichnis kann nicht geschrieben werden
+wizard.choose_disk_location.directory_non_existent=WARNUNG\: Das Verzeichnis existiert nicht
 #orig#wizard.choose_disk_location.directory_size=Directory size {0}
 wizard.choose_disk_location.directory_size=Verzeichnis Gr\u00f6\u00dfe {0}
-##wizard.choose_disk_location.local_base.text=It is not possible to move a folder to the PowerFolder base directory.
-##wizard.choose_disk_location.local_base.title=Base directory
-##wizard.choose_disk_location.maual_sync=Manual synchronization
-##wizard.choose_disk_location.options=Please select required options
-##wizard.choose_disk_location.os_over_size=Warning - Online Storage capacity may be exceeded
-##wizard.choose_disk_location.select=Please select the directory
-##wizard.choose_disk_location.select_file=Select file
-##wizard.choose_disk_location.send_invitation=Send invitation
-##wizard.choose_disk_location.target_dir=Target directory
+wizard.choose_disk_location.local_base.text=Verzeichnis darf nicht der Haupt-Speicherort aller Folder sein
+wizard.choose_disk_location.local_base.title=Speicherort
+wizard.choose_disk_location.maual_sync=Manuell synchronisieren
+wizard.choose_disk_location.options=Optionen auswählen
+wizard.choose_disk_location.os_over_size=Warnung - Online speicher könnte überbelegt werden
+wizard.choose_disk_location.select=Bitte wählen Sie das Verzeichnis
+wizard.choose_disk_location.select_file=Datei auswählen
+wizard.choose_disk_location.send_invitation=Einladungen versenden
+wizard.choose_disk_location.target_dir=Zielverzeichnis
 #orig#wizard.choose_disk_location.title=Select Directory
-wizard.choose_disk_location.title=Festplatten Speicherort
-##wizard.choose_disk_location.total_directory_size=Total size\: {0}
-##wizard.choose_multi_disk_location.select_additional=Additional directories
-##wizard.choose_multi_disk_location.title=Select Directories
+wizard.choose_disk_location.title=Speicherort auswählen
+wizard.choose_disk_location.total_directory_size=Gesamte Größe\: {0}
+wizard.choose_multi_disk_location.select_additional=Zusätzliche Verzeichnisse
+wizard.choose_multi_disk_location.title=Verzeichnis auswählen
 #orig#wizard.control.back=Back
 wizard.control.back=Zur\u00fcck
 #orig#wizard.control.back.description=Go to previous wizard step
 wizard.control.back.description=Zum vorherigen Schritt
 #orig#wizard.control.cancel=Cancel
-wizard.control.cancel=Abbrechen
+wizard.control.cancel=Abbruch
 #orig#wizard.control.cancel.description=Cancel this wizard
 wizard.control.cancel.description=Diesen Wizard abbrechen
 #orig#wizard.control.finish=Exit
@@ -1812,25 +1804,25 @@ wizard.control.help.description=Online Hilfe \u00f6ffnen (Alt-8)
 wizard.control.next=Weiter
 #orig#wizard.control.next.description=Go to next wizard step
 wizard.control.next.description=Zum n\u00e4chsten Schritt
-##wizard.create_folder.problems=There were problems creating the folder(s).
-##wizard.create_folder.title=Creating Folder(s)
-##wizard.create_folder.working=Creating folder(s), please wait.
-##wizard.error_title=Wizard error
-##wizard.finish.os_login_text=The login was successful.
-##wizard.finish.os_login_title=Login Successful
-##wizard.folder_invitation.intro=Invitation from {0} for folder {1}
+wizard.create_folder.problems=Es sind Probleme beim Erstellen des/der Folder aufgetreten.
+wizard.create_folder.title=Erstelle Folder
+wizard.create_folder.working=Erstelle Folder, bitte warten.
+wizard.error_title=Assisten Fehler
+wizard.finish.os_login_text=Login erfolgreich.
+wizard.finish.os_login_title=Login erfolgreich
+wizard.folder_invitation.intro=Einladung von {0} für Folder {1}
 #orig#wizard.folder_invitation.title=Folder Invitation
 wizard.folder_invitation.title=Folder Einladung
-##wizard.folder_online_storage.backup_success_message=Folder {0} was successfully configured for Online Storage mirroring.\n \nPlease keep in mind that the initial backup\nmay take some time on big folders.
-##wizard.folder_online_storage.backup_success_title=Online Storage Setup Successful
-##wizard.folder_online_storage.remove_success_message=The folder was successfully removed from Online Storage
-##wizard.folder_online_storage.remove_success_title=Online Storage Removal Successful
-##wizard.folder_online_storage.warning_message=Do you really want to stop backing up this folder online?
-##wizard.folder_online_storage.warning_stop_backing=Stop backing up
-##wizard.folder_online_storage.warning_title=Online Storage
-##wizard.folder_online_storage.working=Configuring Online Storage
-##wizard.folder_online_storage.working.text=Please wait while configuring Online Storage
-##wizard.folder_setup.title=Configure Folder
+wizard.folder_online_storage.backup_success_message=Folder {0} wird nun online gesichert.\n \nDas erste Backup könnte einige Zeit\nin Anspruch nehmen bei größen Datenmengen.
+wizard.folder_online_storage.backup_success_title=Online Speicher setup erfolgreich
+wizard.folder_online_storage.remove_success_message=Folder erfolgreich vom Online Speicher entfernt
+wizard.folder_online_storage.remove_success_title=Vom Online Speicher entfernt
+wizard.folder_online_storage.warning_message=Möchten Sie wirklich diesen Folder nicht mehr online sichern?
+wizard.folder_online_storage.warning_stop_backing=Backup stoppen
+wizard.folder_online_storage.warning_title=Online Speicher
+wizard.folder_online_storage.working=Online Speicher einrichten
+wizard.folder_online_storage.working.text=Bitten warten Sie währen der Online Speicher konfiguriert wird
+wizard.folder_setup.title=Folder einrichten
 #orig#wizard.load_invitation.choose_file=Choose the invitation file
 wizard.load_invitation.choose_file=Einladungs-Datei \u00f6ffnen
 #orig#wizard.load_invitation.select=Select invitation file
@@ -1839,13 +1831,23 @@ wizard.load_invitation.select=Einladung-Datei ausw\u00e4hlen
 wizard.load_invitation.select_file=Einladungs-Datei ausw\u00e4hlen
 #orig#wizard.login_online_storage.connecting=Connecting to PowerFolder. Please wait...
 wizard.login_online_storage.connecting=Verbinde...
-##wizard.login_online_storage.logging_in=Logging in...
-##wizard.login_online_storage.logging_in.text=Please wait while logging in.
-##wizard.login_online_storage.no_os=Only direct sync. Don't store my files online.
+wizard.login_online_storage.logging_in=Melde an...
+wizard.login_online_storage.logging_in.text=Bitte warten Sie bis zur Anmeldung.
+wizard.login_online_storage.no_os=Nur direkter Sync. Dateien nicht online speichern.
 #orig#wizard.login_online_storage.remember_password=Remember password
 wizard.login_online_storage.remember_password=Passwort merken
 #orig#wizard.login_online_storage.setup_default=Setup default synchronized folder.
 wizard.login_online_storage.setup_default=Beispiel Verzeichnis synchronisieren
+
+## -------------------------------------------------------------------
+##
+## @ TOT: Bis hier übersetzt
+##
+## -------------------------------------------------------------------
+
+
+
+
 ##wizard.multi_folder_setup.no_name.text=No name has been entered for {0}
 ##wizard.multi_folder_setup.no_name.title=No name
 ##wizard.multi_folder_setup.title=Configure Folders
