refs #1743 german translation

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -398,7 +398,7 @@ connection_lan.text=Im lokalen Netzwerk gefunden
 
 connection_quality_good.text=Gute Verbindungsqualität
 connection_quality_medium.text=Mittelmäßige Verbindungsqualität
-connection_quality_poor.text=Schelchte Verbindungsqualität
+connection_quality_poor.text=Schlechte Verbindungsqualität
 
 #orig#date_format.detailed_time=[HH\:mm\:ss\:SSS]
 date_format.detailed_time=[HH\:mm\:ss\:SSS]
@@ -1839,67 +1839,58 @@ wizard.login_online_storage.remember_password=Passwort merken
 #orig#wizard.login_online_storage.setup_default=Setup default synchronized folder.
 wizard.login_online_storage.setup_default=Beispiel Verzeichnis synchronisieren
 
-## -------------------------------------------------------------------
-##
-## @ TOT: Bis hier übersetzt
-##
-## -------------------------------------------------------------------
-
-
-
-
-##wizard.multi_folder_setup.no_name.text=No name has been entered for {0}
-##wizard.multi_folder_setup.no_name.title=No name
-##wizard.multi_folder_setup.title=Configure Folders
-##wizard.multi_online_storage_setup.local_folder_location=Local folder location
-##wizard.multi_online_storage_setup.select_directory=Select directory
-##wizard.multi_online_storage_setup.title=Configure Online Storage Folders
-##wizard.pfwizard.title=Folder Wizard
+wizard.multi_folder_setup.no_name.text=Kein Name für {0} eingegeben
+wizard.multi_folder_setup.no_name.title=Kein Name
+wizard.multi_folder_setup.title=Folder konfigurieren
+wizard.multi_online_storage_setup.local_folder_location=Lokaler Speicherort
+wizard.multi_online_storage_setup.select_directory=Verzeichnis auswählen
+wizard.multi_online_storage_setup.title=Online Folder konfigurieren
+wizard.pfwizard.title=Folder Assistent
 #orig#wizard.project_name.folder_project_success=You successfully set up a project folder\!\n
 wizard.project_name.folder_project_success=Die Projektsynchronisation wurde erfolgreich eingerichtet\!\n
-##wizard.select_online_storage.desktop_shortcut.text=Create desktop shortcut
-##wizard.select_online_storage.info=Please select Online Storage folders to join locally
-##wizard.select_online_storage.title=Select Online Storage folders
-##wizard.send_invitations.add_message.text=Attach personalized message
-##wizard.send_invitations.add_message.tip=Add a personalized message that will be sent with this invitation
-##wizard.send_invitations.information=What is an invitation?
-##wizard.send_invitations.invitation_hint1=Enter a email or computer name to invite.
-##wizard.send_invitations.no_invitees=No invitees. Please try again.
+wizard.select_online_storage.desktop_shortcut.text=Desktop Verknüpfung erstellen
+wizard.select_online_storage.info=Welche Online Folder sollen synchronisiert werden?
+wizard.select_online_storage.title=Online Folder auswählen
+wizard.send_invitations.add_message.text=Nachricht hinzufügen
+wizard.send_invitations.add_message.tip=Der Einladung kann eine persönliche Nachricht hinzugefügt werden
+wizard.send_invitations.information=Was ist eine Einladung?
+wizard.send_invitations.invitation_hint1=Email oder Computername eingeben
+wizard.send_invitations.no_invitees=Niemand ausgewählt. Bitte nochmal versuchen
 #orig#wizard.send_invitations.send_success=Invitation sent
 wizard.send_invitations.send_success=Einladung versendet
 #orig#wizard.send_invitations.send_success_info=You successfully sent the invitation.
 wizard.send_invitations.send_success_info=Die Einladung wurde erfolgreich versendet.
-##wizard.send_invitations.sending_invites=Sending invite
-##wizard.send_invitations.sending_invites.text=Please wait while sending invite.
+wizard.send_invitations.sending_invites=Verschicke Einladung
+wizard.send_invitations.sending_invites.text=Bitte warten während die Einladung verschickt wird
 #orig#wizard.send_invitations.title=Send Invitation
 wizard.send_invitations.title=Einladung versenden
-##wizard.send_invitations_advanced.title=Send Invitation - Advanced
+wizard.send_invitations_advanced.title=Einladung Versenden - Erweitert
 #orig#wizard.setup_success=Setup successfully
 wizard.setup_success=Setup erfolgreich
 #orig#wizard.success_join=You have successfully joined the folder\!
 wizard.success_join=Der Folder wurde auf diesem Computer eingerichtet\!
-##wizard.tell_friend.add_email_address=Please enter email addresses (one per line)
-##wizard.tell_friend.information1=Send emails to friends, inviting them to use PowerFolder.
-##wizard.tell_friend.information2=Emails will be sent direct from PowerFolder central.
-##wizard.tell_friend.personal_message=Please enter a message for the receiver(s) (optional)
-##wizard.tell_friend.success=Emails have been sent to the recipients.
-##wizard.tell_friend.title=Tell a friend about PowerFolder
-##wizard.tell_friend.title.warning_bad_email='{0}' is not a valid email address
-##wizard.tell_friend.title.warning_title=Bad email address
+wizard.tell_friend.add_email_address=Bitte Emails eingeben (eine pro Zeile)
+wizard.tell_friend.information1=Empfielt PowerFolder einem Freund oder Freundin 
+wizard.tell_friend.information2=Es werden kurze emails verschickt.
+wizard.tell_friend.personal_message=Nachricht für den Empfänger eingeben (optional)
+wizard.tell_friend.success=Emails wurden verschickt.
+wizard.tell_friend.title=PowerFolder einem Freund empfehlen
+wizard.tell_friend.title.warning_bad_email='{0}' ist keine gültige Email
+wizard.tell_friend.title.warning_title=Ungültige Email
 #orig#wizard.webservice.enter_account=Please enter your account details below
 wizard.webservice.enter_account=Bitte geben Sie Ihre Daten zum Login in den Online Speicher an
 #orig#wizard.webservice.learn_more=What is PowerFolder Online Storage?
 wizard.webservice.learn_more=Was ist der PowerFolder Online Speicher?
 #orig#wizard.webservice.login=Login
 wizard.webservice.login=Online Speicher Login
-##wizard.webservice.mirror_folder=Back up this folder by PowerFolder Online Storage
+wizard.webservice.mirror_folder=Diesen Folder online sichern
 #orig#wizard.webservice.mirror_setup=Backup Folder by Online Storage
 wizard.webservice.mirror_setup=Folder auf Online Speicher sichern
 #orig#wizard.webservice.password=Password\:
 wizard.webservice.password=Passwort
-##wizard.webservice.recover_password=Recover password
-##wizard.webservice.unmirror_folder=Remove this folder from PowerFolder Online Storage
-##wizard.webservice.unmirror_setup=Remove Folder from Online Storage
+wizard.webservice.recover_password=Password vergessen
+wizard.webservice.unmirror_folder=Folder nicht länger online sichern
+wizard.webservice.unmirror_setup=Vom Online Speicher entfernen
 #orig#wizard.webservice.username=Email\:
 wizard.webservice.username=Email
 #orig#wizard.what_to_do.backp.select=Please select the files to backup
